tests/fixtures/qml/reject/unknown_import.qml
import espFoC.theme

Item {
    width: 100
    height: 100
}
